apply plugin: 'java'

group = 'nl.markv.result'
version = '1.0.0'

description = """`Result` is a value that can be either `Ok` or `Err`, to signal whether an operation succeeded or failed. Each variant can contain data, e.g. `Result<User, ErrMsg>` contains a `User` if ok, and `ErrMsg` when it fails."""

compileJava {
    sourceCompatibility = 15
    targetCompatibility = 15
}

tasks {
    withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs += "--enable-preview"
        options.release.set(15)
    }

    withType(Test) {
        jvmArgs += "--enable-preview"
    }

    withType(JavaExec) {
        jvmArgs += '--enable-preview'
    }
}

repositories {
     maven { url "https://repo.maven.apache.org/maven2" }
}

dependencies {
    compile "com.google.code.findbugs:jsr305:3.0.2"
    testCompile "org.junit.jupiter:junit-jupiter-engine:5.8.1"
}
